Fix z2m and scripting (#18)
* fix z2m and  scripting